fix: z-index for slider-button

--- a/scss/blocks/_hotel.scss
+++ b/scss/blocks/_hotel.scss
@@ -110,7 +110,7 @@
         height: 30px;
         position: absolute;
         top: 50%;
-        z-index: 10;
+        z-index: 100;
         border: none;
         background-color: transparent;
         cursor: pointer;
